Fixed sizing issues with Offer section on smaller screens

--- a/src/Components/App/App.css
+++ b/src/Components/App/App.css
@@ -315,12 +315,16 @@ body {
         margin-top: 0;
     }
 
-    .cardExperience__root, .app__offer-container {
+    .cardExperience__root {
         margin-top: 420px;
     }
 
     .app__aboutMe-skillbarContainer {
         margin-top: 50px;
+    }
+
+    .MuiCard-root.cardOffer__root:nth-child(3) {
+        margin-top: 20px;
     }
 }
 
@@ -350,7 +354,7 @@ body {
         margin-top: 20px;
     }
 
-    .cardExperience__root, .app__offer-container {
+    .cardExperience__root {
         margin-top: 660px;
     }
 }
@@ -359,6 +363,10 @@ body {
     .iconList {
         margin-left: auto;
         margin-right: auto;
+    }
+
+    .MuiCard-root.cardOffer__root:nth-child(2) {
+        margin-top: 20px;
     }
 }
 
